--- a/index.html
+++ b/index.html
@@ -858,9 +858,7 @@ function handleComplete(evt) {
     <div> INICIAR <b></b> </div>
   </div>
   <div id="contenedor_nombre_leccion" class="contenedor_nombre_leccion_ini">
-    <div id="nom_curso" class="nom_curso"> <img src="images/fondo_nomcurso.png" style="
-    height: 240px;
-    top: -100px;">
+    <div id="nom_curso" class="nom_curso"> <img src="images/fondo_nomcurso.png" style="width:580px">
       <div class="nc_img">CURSO: Gestión de Riesgo Operacional </div>
     </div>
     <div id="txt_mod" class="txt_mod"> 
